--- a/gwork.maui/gwork.maui.csproj
+++ b/gwork.maui/gwork.maui.csproj
@@ -65,4 +65,10 @@
 	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Controls\NavBar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
