user can be admin

--- a/gwork.maui/gwork.maui.csproj
+++ b/gwork.maui/gwork.maui.csproj
@@ -66,6 +66,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Pages\AdminPages\" />
 	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
