admin can apply or decline offer applies

--- a/gwork.maui/gwork.maui.csproj
+++ b/gwork.maui/gwork.maui.csproj
@@ -88,6 +88,9 @@
 	  <MauiXaml Update="Pages\AdminPages\OffersListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\AdminPages\UserOfferApplyListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\LogInPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
